internal MainThread Class cleanup round one